// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Fieldset /> renders correctly with borderNone variant 1`] = `
<fieldset
  className="MuiBox-root MuiBox-root-5 makeStyles-root-3 makeStyles-borderNone-1"
/>
`;

exports[`<Fieldset /> renders correctly with borderSolid variant 1`] = `
<fieldset
  className="MuiBox-root MuiBox-root-6 makeStyles-root-3 makeStyles-borderSolid-2"
/>
`;

exports[`<Fieldset /> renders correctly with no props 1`] = `
<fieldset
  className="MuiBox-root MuiBox-root-4 makeStyles-root-3"
/>
`;
